--- a/lab6_exe_D.html
+++ b/lab6_exe_D.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : lab6_exe_D.html
 Assignment  : Lab 6, Exercise D
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Daad Haymour, Justin Wang
+Submission  : Febraury 26, 2024
 Description : API Usage.
 =========================================================
 -->
